Replaced new Integer(x) with Integer.valueOf(x).