@@ -78,8 +78,8 @@ public class Types {
          // javaType immutable defValue
          new TypeInfo("other", null, java.lang.Object.class, false, null),
          new TypeInfo("string", null, java.lang.String.class, true, null),
-         new TypeInfo("integer", java.lang.Integer.TYPE, java.lang.Integer.class, true, new Integer(0)),
-         new TypeInfo("int", java.lang.Integer.TYPE, java.lang.Integer.TYPE, true, new Integer(0)),
+         new TypeInfo("integer", java.lang.Integer.TYPE, java.lang.Integer.class, true, Integer.valueOf(0)),
+         new TypeInfo("int", java.lang.Integer.TYPE, java.lang.Integer.TYPE, true, Integer.valueOf(0)),
          new TypeInfo("long", java.lang.Long.TYPE, java.lang.Long.class, true, new Long(0L)),
          new TypeInfo("big-integer", null, java.math.BigInteger.class, true, BigInteger.valueOf(0)),
          new TypeInfo("boolean", java.lang.Boolean.TYPE, java.lang.Boolean.class, true, Boolean.FALSE),
