@@ -153,7 +153,7 @@ public class IntegerValidator extends PatternValidator implements TypeValidator 
      */
     public Integer getTotalDigits() {
         if (_totalDigits >= 0) {
-            return new Integer(_totalDigits);
+            return Integer.valueOf(_totalDigits);
         }
         return null;
     }
